<resources>
<string name="app_name">"FFfinder"</string>
<string name="app_title_long">"Simple Friend and Family Finder"</string>
<string name="retry">"Retry"</string>
<string name="unknown_error_msg">"Unknown error occurred"</string>
<string name="close">"Close"</string>
<string name="confirm">"Confirm"</string>
<string name="submit">"Submit"</string>
<string name="quit">"Quit"</string>
<string name="error">"Error"</string>
<string name="yesterday">"Yesterday"</string>
<string name="ok">"OK"</string>
<string name="cancel">"Cancel"</string>
<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="never">"Never"</string>
<string name="loading">"Loading…"</string>
<string name="add">"Add"</string>
<string name="address_myself">"Me"</string>
<string name="next">"Next"</string>
<string name="don_remind_me_again">"Don't remind me again"</string>
<string name="dont_show_this_again">"Don't show this again"</string>
<string name="search">"Search"</string>
<string name="unknown">"Unknown"</string>
<string name="tutorial">"Tutorial"</string>
<string name="welcome_msg_1">"Welcome To"</string>
<string name="first_time_msg_content">"Thanks for choosing us, you now have a friend &amp; family finder that,
    - Does not drain battery as search is on demand
    - Offers some privacy as it allows you to block search and does not track every move
    - Is free with Ads"
</string>
<string name="required_location_provider_msg">"FFfinder requests you to enable location service"</string>
<string name="btn_go_to_location_settings_text">"Config Location"</string>
<string name="some_permission_denied_toast_msg">"Please make sure all required permissions are given to start
    FFfinder"
</string>
<string name="initializing">"Initializing…"</string>
<string name="checking_google_service_availability">"Checking google service availability"</string>
<string name="retrieving_token">"Retrieving Token…"</string>
<string name="initializing_user">"Initializing user…"</string>
<string name="initialization_done">"Initialization done."</string>
<string name="no_google_service_error_msg">"Please make sure Google Play service is properly configured before running this app."
</string>
<string name="no_connection_msg">"No connection found, please check your connection and try again."</string>
<string name="db_failed_msg">"Unable to connect to server, please check your connection and try again."</string>
<string name="location_service_change_denied">"Please configure location service before starting FFfinder."</string>
<string name="never_locate_user_msg">"Click search to locate!"</string>
<string name="unknown_address_msg">"Unknown address, please see the location with map"</string>
<string name="block_dialog_title">"Block %s?"</string>
<string name="block_dialog_content">"%1$s will not be able to locate you after this. You can however still locate
    %2$s"
</string>
<string name="search_status_starting_msg">"Starting…"</string>
<string name="search_status_checking_data_msg">"Connecting to location…"</string>
<string name="search_status_waiting_user_respond_msg">"Request sent, waiting for user response…"</string>
<string name="search_status_waiting_user_location_msg">"User has responded, waiting for location …"</string>
<string name="search_status_geodecoding_msg">"Getting user's address…"</string>
<string name="error_no_link_msg">"Cannot retrieve address as user does not have you on the list."</string>
<string name="error_timeout_msg">"Unable to get user's latest location."</string>
<string name="error_timeout_no_connection_msg">"Unable to connect, please check your connection and try again."
</string>
<string name="error_timeout_unknown_reason_possible_reasons">"1) User's device does not have active internet
    connection
    2) User has forced close FFfinder"
</string>
<string name="error_timeout_unknown_reason_possible_reasons2">"3) Configurations not set up for some specific phone
    models"
</string>
<string name="error_user_blocked_msg">"User has blocked you."</string>
<string name="failed_search_msg_text1">"Unable to locate this user."</string>
<string name="failed_search_msg_text2">"We will keep searching this user and send you a free notification later, or
    you can try to search again."
</string>
<string name="btn_search_again_text">"Search again anyway"</string>
<string name="btn_wait_autonotification_text">"Wait for auto notification"</string>
<string name="search_left">"Search Left"</string>
<string name="ran_out_free_search_msg">"You have run out of free search, you can earn searches by"</string>
<string name="btn_watch_ads_earn_credits_text">"Watch Ads"</string>
<string name="btn_input_promo_code_earn_credits_text">"Promo Code"</string>
<string name="btn_subscript_unlimited_searches_text">"Subscribe"</string>
<string name="btn_maybe_next_time_text">"Maybe Next Time"</string>
<string name="no_ads_available_toast_msg">"No ads available, free searches will be rewarded."</string>
<string name="searching">"Searching"</string>
<string name="auto_searching">"Auto"</string>
<string name="tap_plus_to_add_friend_family">"+ Tap to add friend/family"</string>
<string name="settings_activity_title">"Settings"</string>
<string name="settings_item_language_title">"Language"</string>
<string name="vip_member">"VIP (%s/year)"</string>
<string name="vip_title">"VIP"</string>
<string name="manage_subscriptions_item_title">"Manage Subscriptions"</string>
<string name="manage_subscriptions_introduction_android">"To manage subscription, please open Google Play Store, tap Menu &gt; Account &gt; Subscriptions"
</string>
<string name="known_issues_title">"Known Issues"</string>
<string name="issue_fix_xiaomi">"For Xiao Mi, when using FFfinder, to ensure your loved ones can always find you,
please enable our apps to able to run in background by following these steps:

1) Go to Security Apps
2) Go to permission then click on Auto Start Management
3) Add/Enable auto start apps, allow FFfinder"
</string>
<string name="issue_fix_huawei">"For Huawei, when using FFfinder, to ensure your loved one can always find you,
please enable our apps to able to run in background by following these steps:

1) Go to Settings
2) Click on Protected Apps
3) Add FFfinder as protected apps"
</string>
<string name="issue_fix_sony">"For Sony, when using FFfinder, if you are using Stamina Mode in Power Management (You
may ignore this instruction if you are not using Stamina Mode), please follow these steps to ensure that your
loved one can always find you:

1) Go to Power Management
2) Click on STAMINA mode
3) Apps active in standby
4) Add FFfinder"
</string>
<string name="map_activity_title">"Map"</string>
<string name="street_view_not_available_msg">"Street view is not available in this area"</string>
<string name="pick_your_travel_mode">"Pick your travel mode"</string>
<string name="duration">"Duration"</string>
<string name="distance">"Distance"</string>
<string name="directions">"Directions"</string>
<string name="no_route_found_error_msg">"No route found"</string>
<string name="promo_code_activity_title">"Promo code"</string>
<string name="input_promo_code_title">"Input Promo Code"</string>
<string name="promo_code_title">"Promo Code:"</string>
<string name="empty_promo_code_error_msg">"Please input a promo code"</string>
<string name="promo_code_failed_error_msg">"Invalid promo code or you have already used this promo code for this
    account."
</string>
<string name="checking_promo_code_msg">"Checking promo code…"</string>
<string name="promo_code_success_msg">"Promo code activated, you are now granted %s free searches."</string>
<string name="add_new_member_title">"Add Friend/Family"</string>
<string name="add_new_member_manually_title">"Add Friend/Family Manually"</string>
<string name="user_key_title">"Your friend/family invite code"</string>
<string name="member_name_title">"How do you address him/her?"</string>
<string name="no_user_key_msg">"Please input invite code from the user you wish to add."</string>
<string name="no_member_name_msg">"Please input member's name"</string>
<string name="no_your_name_msg">"Please input your name"</string>
<string name="adding_friend_msg">"Adding record…"</string>
<string name="user_already_added_error_msg">"User has already existed in your list as %s"</string>
<string name="key_expired_or_not_exist_msg">"Invite code does not exist or has expired."</string>
<string name="edit_name_title">"Edit Name"</string>
<string name="new_name_title">"New Name"</string>
<string name="share_key_activity_title">"Invite code"</string>
<string name="share_key_title">"Add Friend/Family By Sharing Your Invite code"</string>
<string name="btn_share_via_other_apps_text">"Share"</string>
<string name="your_key_title">"Share this Invite code with your friends and family, and you can start tracking their 
location once they have added you
(No action is required after sharing your Invite code)"</string>
<string name="expired_at_title">"(Expire at %s)"</string>
<string name="minutes_left">"(%s mins left)"</string>
<string name="copied_to_clipboard_toast_msg">"Copied"</string>
<string name="regenerating_key_msg">"Updating Invite code…"</string>
<string name="regen_key_confirm_msg">"Are you sure you want to regenerate your Invite code? User will not be able to add you anymore using your previous Invite code."</string>
<string name="share_title">"Share Invite code"</string>
<string name="share_subject">"FFfinder Invite code"</string>
<string name="share_msg">"You are important to me! Please download Simple Friend and Family Finder so that we can locate each other with a click for FREE at 
https://play.google.com/store/apps/details?id=com.ffinder.android&amp;referrer=%1$s

Then add me by clicking on this link (Open with FFfinder)
http://ff-finder.com/addnew/%2$s"</string>
<string name="after_share_passcode_reminder">"Thanks for sharing your Invite code, just wait for your friend or family to add you and you can start tracking each other."</string>
<string name="delete_user_title">"Delete %s?"</string>
<string name="confirm_delete_user_msg">"Are you sure you want to delete this user? The user will not be able to locate you after you have deleted him/her."
</string>
<string name="language_take_effect_after_restart_toast">"Language settings will only take effect after restart"
</string>
<string name="notification_user_located_title">"FFfinder Update"</string>
<string name="notification_x_has_been_located_msg">"%s has been located."</string>
<string name="notification_x_users_located_msg">"%s of friends located."</string>
<string name="notification_x_added_you">"%s has added you! You may now locate each other."</string>
<string name="notification_remember_to_add_friend_msg">"Get started! Share your Invite code to add your friends and
    family :)"
</string>
<string name="first_time_see_passcode">"Hi, it is your first time adding friend/family, do you want to see a short tutorial guide?"</string>
<string name="share_passcode_s1">"Every user has a unique temporary Invite code, you must share your personal Invite code with your friend/family to connect."</string>
<string name="share_passcode_s2">"Click on the Share Invite code button and pick a way to share your Invite code."</string>
<string name="share_passcode_s3">"After this, no action is required."</string>
<string name="share_passcode_s4">"After your friend/family has added you, both of you can start tracking each other."</string>
<string name="add_manually_a1">"Every user has a unique temporary Invite code, get the Invite code from them by asking them to click on the PLUS icon."</string>
<string name="add_manually_a2">"Upon receiving the message, note down their Invite code here."</string>
<string name="add_manually_a3">"Key in the code at Your friend's Invite code"</string>
<string name="click_to_see_possible_reasons">"Click to see possible reasons"</string>
</resources>