<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.ffinder.android.ActivityAddFriend" android:background="@color/colorPrimary"
        android:focusable="true" android:focusableInTouchMode="true">


    <include layout="@layout/default_toolbar" android:id="@+id/my_toolbar"/>

    <ScrollView  android:layout_width="match_parent" android:layout_height="fill_parent"
                 android:layout_below="@+id/my_toolbar">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorContrast" android:paddingTop="30dp" android:paddingLeft="20dp"
                android:paddingRight="20dp" android:paddingBottom="40dp">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:gravity="center" android:id="@+id/relativeLayout4">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3" android:src="@drawable/add_friend_icon"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_new_member_title"
                        android:id="@+id/textView7"
                        android:layout_toRightOf="@+id/imageView3" android:textColor="@color/colorPrimaryDark"
                        android:layout_centerVertical="true" android:layout_marginLeft="10dp" android:textSize="18sp"/>
            </RelativeLayout>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Lorem Ipsum is a simple text"
                    android:id="@+id/txtError" android:layout_below="@+id/relativeLayout4"
                    android:visibility="gone" android:layout_marginTop="10dp" android:textStyle="bold"
                    android:textColor="@color/colorError" android:textSize="14sp"/>
            <com.ffinder.android.extensions.TextFieldWrapper
                    android:id="@+id/newNameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:wrapperTitle="@string/user_key_title"
                    android:layout_below="@+id/txtError"/>

            <com.ffinder.android.extensions.TextFieldWrapper
                    android:id="@+id/memberNameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:wrapperTitle="@string/member_name_title"
                    android:layout_below="@+id/newNameWrapper"/>

            <com.ffinder.android.extensions.TextFieldWrapper
                    android:id="@+id/yourNameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:wrapperTitle="@string/your_name_title"
                    android:layout_below="@+id/memberNameWrapper"/>

            <com.ffinder.android.extensions.FFTextButton
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:id="@+id/btnAdd"
                    android:layout_marginTop="30dp" android:layout_below="@+id/yourNameWrapper"
                    android:layout_centerHorizontal="true"
                    app:ffBtnColorScheme="green"/>
        </RelativeLayout>

    </ScrollView>




</RelativeLayout>
