<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="15dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/your_key_title"
            android:id="@+id/textView4" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout" android:layout_below="@+id/textView4"
            android:layout_alignParentRight="false" android:layout_alignParentEnd="false" android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtYourKey" android:layout_centerHorizontal="true"
                android:text="xxxxx" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
        <ImageButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegenKey"
                android:src="@drawable/reset_icon"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true" android:layout_toRightOf="@+id/txtYourKey"
                android:layout_toEndOf="@+id/txtYourKey" android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/expired_at_title"
                android:id="@+id/textView6" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_marginTop="10dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txtExpiredDateTime"
                android:text="xx:xx pm" android:layout_alignTop="@+id/textView6" android:layout_toRightOf="@+id/textView6"
                android:layout_toEndOf="@+id/textView6" android:layout_marginLeft="5dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_share_via_other_apps_text"
                android:id="@+id/btnShareKey" android:layout_below="@+id/txtExpiredDateTime"
                android:layout_centerHorizontal="true" android:layout_marginTop="30dp"/>
    </RelativeLayout>
</RelativeLayout>